CSE218 Content